; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_connect.c_cifs_read_from_socket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_connect.c_cifs_read_from_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TCP_Server_Info = type { i32 }
%struct.kvec = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cifs_read_from_socket(%struct.TCP_Server_Info* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TCP_Server_Info*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.kvec, align 8
  store %struct.TCP_Server_Info* %0, %struct.TCP_Server_Info** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = getelementptr inbounds %struct.kvec, %struct.kvec* %7, i32 0, i32 0
  store i8* %8, i8** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.kvec, %struct.kvec* %7, i32 0, i32 1
  store i32 %10, i32* %11, align 8
  %12 = load %struct.TCP_Server_Info*, %struct.TCP_Server_Info** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @cifs_readv_from_socket(%struct.TCP_Server_Info* %12, %struct.kvec* %7, i32 1, i32 %13)
  ret i32 %14
}

declare dso_local i32 @cifs_readv_from_socket(%struct.TCP_Server_Info*, %struct.kvec*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
